Refactor test setup methods to public and protected visibility; add FlightCssClasses model and update password regex pattern for improved validation